analysis/low-level-api-fir/testData/lazyResolve/errors/danglingAnnotationOnTopLevelFunction2.kt
annotation class Ann

@Ann(
fun <caret>foo() = 42
class A